--- a/sklearn-pca.ipynb
+++ b/sklearn-pca.ipynb
@@ -53,7 +53,7 @@
     "import matplotlib\n",
     "\n",
     "# read excel (examples of how to set up your data given in folder)\n",
-    "data = pd.read_csv(\"./pca/embedding-O.csv\") \n",
+    "data = pd.read_csv(\"./pca/embedding0-O.csv\") \n",
     "\n",
     "# scale the data \n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -75,7 +75,7 @@
     "labelH=pd.read_csv(\"./pca/labelH.csv\")\n",
     "#plot figure\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.scatter(x_pca[:,0],x_pca[:,1],c=labelO['Target'],cmap='rainbow')\n",
+    "plt.scatter(x_pca[:,0],x_pca[:,1])\n",
     "plt.xlabel('First Principal Component')\n",
     "plt.ylabel('Second Principal Component')\n",
     "\n",
