Update instructions to have access to GPUs. Add notebook that checks for resources.

--- a/notebooks/hello-qunb.ipynb
+++ b/notebooks/hello-qunb.ipynb
@@ -1,6 +1,77 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "appreciated-monday",
+   "metadata": {},
+   "source": [
+    "# Hello QuNB!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "orange-archive",
+   "metadata": {},
+   "source": [
+    "This notebook checks whether you have access to all the required tools to train deep neural networks on the GPU infrastructure of Compute Canada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "spoken-header",
+   "metadata": {},
+   "source": [
+    "# Check computational resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "celtic-shelter",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access to 16 cores.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "ncpus = int(os.environ.get('SLURM_CPUS_PER_TASK',default=1))\n",
+    "print(\"Access to \" + str(ncpus) + \" cores.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bridal-royal",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Access to GPU: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(\"Access to GPU: \" + str(torch.cuda.is_available()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "micro-circus",
+   "metadata": {},
+   "source": [
+    "# Check dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "forward-cornell",
@@ -8,24 +79,6 @@
    "outputs": [],
    "source": [
     "import schnetpack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "suffering-relief",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello QuNB\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello QuNB\")"
    ]
   },
   {
@@ -73,14 +126,6 @@
     "plt.plot(x,y)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "lyric-specific",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
