--- a/notebooks/output-intermediatte-layers.ipynb
+++ b/notebooks/output-intermediatte-layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
     "\n",
     "# Load best model where it was stored after training\n",
     "\n",
-    "model = torch.load(\"./trained_models/qm911/best_model\", map_location=torch.device('cpu'))\n",
+    "best_model = torch.load(\"./trained_models/qm911/best_model\", map_location=torch.device('cpu'))\n",
     "\n",
     "# Download QM9 dataset to use in evaluating model\n",
     "qm9data = QM9('./qm9.db', download=True, remove_uncharacterized=True)\n",
@@ -43,7 +43,7 @@
     "\n",
     "at, props = qm9data.get_properties(idx=0)\n",
     "\n",
-    "calculator = spk.interfaces.SpkCalculator(model=model, device=device, energy=QM9.U0)\n",
+    "calculator = spk.interfaces.SpkCalculator(model=best_model, device=device, energy=QM9.U0)\n",
     "at.set_calculator(calculator)\n",
     "\n",
     "\n",
@@ -52,143 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[ 1.0020e+00, -4.5615e-01,  9.3046e-01, -1.0296e+00,  4.3175e-01,\n",
-      "          -1.0405e+00, -1.5797e-01,  1.8883e-01, -2.1637e+00, -6.1232e-01,\n",
-      "          -4.4904e-01,  5.8696e-01, -2.9584e-02,  1.8830e-01,  5.9463e-01,\n",
-      "          -3.4088e-01, -3.7521e-01, -1.4308e+00, -5.3438e-01, -1.8368e+00,\n",
-      "          -1.1038e+00, -8.7094e-01,  5.9205e-01,  1.2761e+00, -1.6461e+00,\n",
-      "          -1.5379e-02,  7.2449e-01,  6.5014e-01,  6.9771e-01, -1.4652e-01,\n",
-      "           6.9538e-01,  8.3891e-01,  2.2921e+00, -6.9208e-01, -4.9742e-01,\n",
-      "           4.6223e-01, -9.9598e-01, -1.4892e-03, -4.4677e-01,  5.6274e-01,\n",
-      "          -5.2279e-01, -1.0060e+00,  7.2956e-01,  1.1741e+00, -4.9470e-01,\n",
-      "           1.2095e-01, -1.2147e+00,  1.7405e+00, -4.4640e-01, -3.9764e-01,\n",
-      "          -1.6745e+00,  1.9847e+00,  1.1028e+00,  1.4822e+00, -6.2252e-01,\n",
-      "          -5.8495e-02, -6.4114e-01,  2.7588e-01, -5.9091e-01, -3.4031e-02,\n",
-      "           7.2127e-01, -1.8101e-02,  1.1446e+00,  9.7523e-01, -6.9461e-01,\n",
-      "           8.5732e-01, -8.9082e-01, -4.1042e-01, -1.4198e+00,  4.1663e-01,\n",
-      "          -7.3619e-01, -1.5104e+00, -1.3533e+00, -1.0808e-02, -2.6668e-01,\n",
-      "           7.4543e-01,  4.1642e-01,  1.5852e+00, -1.6852e+00,  6.0357e-02,\n",
-      "           6.0888e-01,  2.2977e-02, -1.7198e-01, -5.0099e-01,  8.0502e-01,\n",
-      "           1.1427e+00,  1.4255e+00, -2.2721e-01, -5.7263e-02, -4.0850e-01,\n",
-      "           3.9874e-01,  8.3254e-01,  5.7036e-02,  1.3797e+00, -2.0662e-01,\n",
-      "           7.0649e-01, -1.2420e+00,  1.0712e+00,  4.1207e-01, -1.1898e+00,\n",
-      "          -6.6183e-01, -5.1662e-01,  1.1121e+00, -8.2602e-01,  3.1845e-01,\n",
-      "           1.5994e+00, -1.3982e+00, -6.7442e-01, -2.6829e-01, -1.2160e-01,\n",
-      "           2.2200e+00,  1.8768e+00, -3.6766e-01,  9.3094e-01, -2.0657e+00,\n",
-      "          -3.8438e-01, -6.1145e-01,  1.8433e+00,  5.0827e-01, -2.3026e-01,\n",
-      "           2.1249e-01,  2.0160e+00,  1.5311e-01, -4.3474e-01,  1.1050e+00,\n",
-      "           6.0256e-01, -6.9341e-01, -4.0377e-01],\n",
-      "         [-1.4762e+00, -3.2481e-01,  6.0506e-01,  2.3570e-01,  1.4555e+00,\n",
-      "           1.4538e+00,  2.7311e+00,  2.9712e-02, -2.4357e-01,  3.3972e-01,\n",
-      "           2.3825e-01, -4.6745e-01, -9.9219e-02, -8.1534e-01, -1.0696e+00,\n",
-      "           1.5323e+00,  3.6540e-01, -5.4376e-01, -8.3532e-01, -4.5463e-01,\n",
-      "          -4.9561e-01, -3.2293e-01, -2.6590e-01,  6.3458e-01, -2.4457e-01,\n",
-      "           3.0208e-02,  3.9155e-01, -3.0149e-01,  7.6337e-01, -2.4581e+00,\n",
-      "           1.3590e+00, -7.2050e-01,  1.1182e+00, -1.0473e+00, -4.0208e-01,\n",
-      "           3.8681e-01,  9.2990e-01, -2.0066e-01,  3.4438e-01, -5.3400e-01,\n",
-      "          -2.0159e+00,  1.0971e+00, -1.6682e+00, -1.6007e+00,  7.1736e-01,\n",
-      "          -3.8367e-01, -2.8377e-01,  7.9254e-01, -8.3518e-01,  2.7549e+00,\n",
-      "           1.7073e+00, -1.1385e+00,  5.4654e-01,  1.7947e+00,  1.0829e+00,\n",
-      "          -7.8698e-01,  5.4647e-01,  4.7443e-01, -2.0840e+00,  1.4505e+00,\n",
-      "           1.7156e+00, -5.7487e-01, -2.2020e-01,  6.1603e-01,  1.4760e+00,\n",
-      "          -8.7942e-01, -2.8882e-01,  8.9869e-01, -6.0223e-01, -9.9205e-01,\n",
-      "          -1.9371e-01, -6.7272e-01, -1.7408e+00, -6.9259e-01, -1.1241e+00,\n",
-      "          -1.5903e+00,  3.4554e-01,  2.5587e-01, -1.1913e-01,  1.3727e+00,\n",
-      "           8.5202e-01, -8.9270e-01,  3.4655e-01, -1.5989e+00,  7.4882e-01,\n",
-      "          -2.4016e-01,  3.2150e-01, -4.9333e-01, -7.6685e-01, -2.4241e+00,\n",
-      "          -1.3111e+00,  3.3970e-01,  1.6059e-01,  4.3667e-01,  2.2499e+00,\n",
-      "          -7.0156e-01,  1.1386e+00, -1.3493e-02,  3.3560e-01,  3.2511e-01,\n",
-      "           8.0058e-01, -8.0776e-02, -1.2201e+00,  5.0933e-01, -6.9623e-03,\n",
-      "           1.2664e-01, -3.5895e-01,  2.2618e-01, -1.6236e-02, -2.3079e-01,\n",
-      "          -1.8697e+00, -7.4181e-02,  6.1955e-01,  3.2966e-01,  8.8567e-01,\n",
-      "           9.5766e-02,  1.9690e+00, -1.7141e+00,  3.2056e+00,  9.3478e-01,\n",
-      "          -1.2499e+00,  1.3547e+00, -1.4608e-01,  1.1562e+00,  1.9036e+00,\n",
-      "          -2.7944e-01, -4.4553e-01,  9.1232e-01],\n",
-      "         [-1.4762e+00, -3.2481e-01,  6.0506e-01,  2.3570e-01,  1.4555e+00,\n",
-      "           1.4538e+00,  2.7311e+00,  2.9712e-02, -2.4357e-01,  3.3972e-01,\n",
-      "           2.3825e-01, -4.6745e-01, -9.9219e-02, -8.1534e-01, -1.0696e+00,\n",
-      "           1.5323e+00,  3.6540e-01, -5.4376e-01, -8.3532e-01, -4.5463e-01,\n",
-      "          -4.9561e-01, -3.2293e-01, -2.6590e-01,  6.3458e-01, -2.4457e-01,\n",
-      "           3.0208e-02,  3.9155e-01, -3.0149e-01,  7.6337e-01, -2.4581e+00,\n",
-      "           1.3590e+00, -7.2050e-01,  1.1182e+00, -1.0473e+00, -4.0208e-01,\n",
-      "           3.8681e-01,  9.2990e-01, -2.0066e-01,  3.4438e-01, -5.3400e-01,\n",
-      "          -2.0159e+00,  1.0971e+00, -1.6682e+00, -1.6007e+00,  7.1736e-01,\n",
-      "          -3.8367e-01, -2.8377e-01,  7.9254e-01, -8.3518e-01,  2.7549e+00,\n",
-      "           1.7073e+00, -1.1385e+00,  5.4654e-01,  1.7947e+00,  1.0829e+00,\n",
-      "          -7.8698e-01,  5.4647e-01,  4.7443e-01, -2.0840e+00,  1.4505e+00,\n",
-      "           1.7156e+00, -5.7487e-01, -2.2020e-01,  6.1603e-01,  1.4760e+00,\n",
-      "          -8.7942e-01, -2.8882e-01,  8.9869e-01, -6.0223e-01, -9.9205e-01,\n",
-      "          -1.9371e-01, -6.7272e-01, -1.7408e+00, -6.9259e-01, -1.1241e+00,\n",
-      "          -1.5903e+00,  3.4554e-01,  2.5587e-01, -1.1913e-01,  1.3727e+00,\n",
-      "           8.5202e-01, -8.9270e-01,  3.4655e-01, -1.5989e+00,  7.4882e-01,\n",
-      "          -2.4016e-01,  3.2150e-01, -4.9333e-01, -7.6685e-01, -2.4241e+00,\n",
-      "          -1.3111e+00,  3.3970e-01,  1.6059e-01,  4.3667e-01,  2.2499e+00,\n",
-      "          -7.0156e-01,  1.1386e+00, -1.3493e-02,  3.3560e-01,  3.2511e-01,\n",
-      "           8.0058e-01, -8.0776e-02, -1.2201e+00,  5.0933e-01, -6.9623e-03,\n",
-      "           1.2664e-01, -3.5895e-01,  2.2618e-01, -1.6236e-02, -2.3079e-01,\n",
-      "          -1.8697e+00, -7.4181e-02,  6.1955e-01,  3.2966e-01,  8.8567e-01,\n",
-      "           9.5766e-02,  1.9690e+00, -1.7141e+00,  3.2056e+00,  9.3478e-01,\n",
-      "          -1.2499e+00,  1.3547e+00, -1.4608e-01,  1.1562e+00,  1.9036e+00,\n",
-      "          -2.7944e-01, -4.4553e-01,  9.1232e-01],\n",
-      "         [-1.4762e+00, -3.2481e-01,  6.0506e-01,  2.3570e-01,  1.4555e+00,\n",
-      "           1.4538e+00,  2.7311e+00,  2.9712e-02, -2.4357e-01,  3.3972e-01,\n",
-      "           2.3825e-01, -4.6745e-01, -9.9219e-02, -8.1534e-01, -1.0696e+00,\n",
-      "           1.5323e+00,  3.6540e-01, -5.4376e-01, -8.3532e-01, -4.5463e-01,\n",
-      "          -4.9561e-01, -3.2293e-01, -2.6590e-01,  6.3458e-01, -2.4457e-01,\n",
-      "           3.0208e-02,  3.9155e-01, -3.0149e-01,  7.6337e-01, -2.4581e+00,\n",
-      "           1.3590e+00, -7.2050e-01,  1.1182e+00, -1.0473e+00, -4.0208e-01,\n",
-      "           3.8681e-01,  9.2990e-01, -2.0066e-01,  3.4438e-01, -5.3400e-01,\n",
-      "          -2.0159e+00,  1.0971e+00, -1.6682e+00, -1.6007e+00,  7.1736e-01,\n",
-      "          -3.8367e-01, -2.8377e-01,  7.9254e-01, -8.3518e-01,  2.7549e+00,\n",
-      "           1.7073e+00, -1.1385e+00,  5.4654e-01,  1.7947e+00,  1.0829e+00,\n",
-      "          -7.8698e-01,  5.4647e-01,  4.7443e-01, -2.0840e+00,  1.4505e+00,\n",
-      "           1.7156e+00, -5.7487e-01, -2.2020e-01,  6.1603e-01,  1.4760e+00,\n",
-      "          -8.7942e-01, -2.8882e-01,  8.9869e-01, -6.0223e-01, -9.9205e-01,\n",
-      "          -1.9371e-01, -6.7272e-01, -1.7408e+00, -6.9259e-01, -1.1241e+00,\n",
-      "          -1.5903e+00,  3.4554e-01,  2.5587e-01, -1.1913e-01,  1.3727e+00,\n",
-      "           8.5202e-01, -8.9270e-01,  3.4655e-01, -1.5989e+00,  7.4882e-01,\n",
-      "          -2.4016e-01,  3.2150e-01, -4.9333e-01, -7.6685e-01, -2.4241e+00,\n",
-      "          -1.3111e+00,  3.3970e-01,  1.6059e-01,  4.3667e-01,  2.2499e+00,\n",
-      "          -7.0156e-01,  1.1386e+00, -1.3493e-02,  3.3560e-01,  3.2511e-01,\n",
-      "           8.0058e-01, -8.0776e-02, -1.2201e+00,  5.0933e-01, -6.9623e-03,\n",
-      "           1.2664e-01, -3.5895e-01,  2.2618e-01, -1.6236e-02, -2.3079e-01,\n",
-      "          -1.8697e+00, -7.4181e-02,  6.1955e-01,  3.2966e-01,  8.8567e-01,\n",
-      "           9.5766e-02,  1.9690e+00, -1.7141e+00,  3.2056e+00,  9.3478e-01,\n",
-      "          -1.2499e+00,  1.3547e+00, -1.4608e-01,  1.1562e+00,  1.9036e+00,\n",
-      "          -2.7944e-01, -4.4553e-01,  9.1232e-01],\n",
-      "         [-1.4762e+00, -3.2481e-01,  6.0506e-01,  2.3570e-01,  1.4555e+00,\n",
-      "           1.4538e+00,  2.7311e+00,  2.9712e-02, -2.4357e-01,  3.3972e-01,\n",
-      "           2.3825e-01, -4.6745e-01, -9.9219e-02, -8.1534e-01, -1.0696e+00,\n",
-      "           1.5323e+00,  3.6540e-01, -5.4376e-01, -8.3532e-01, -4.5463e-01,\n",
-      "          -4.9561e-01, -3.2293e-01, -2.6590e-01,  6.3458e-01, -2.4457e-01,\n",
-      "           3.0208e-02,  3.9155e-01, -3.0149e-01,  7.6337e-01, -2.4581e+00,\n",
-      "           1.3590e+00, -7.2050e-01,  1.1182e+00, -1.0473e+00, -4.0208e-01,\n",
-      "           3.8681e-01,  9.2990e-01, -2.0066e-01,  3.4438e-01, -5.3400e-01,\n",
-      "          -2.0159e+00,  1.0971e+00, -1.6682e+00, -1.6007e+00,  7.1736e-01,\n",
-      "          -3.8367e-01, -2.8377e-01,  7.9254e-01, -8.3518e-01,  2.7549e+00,\n",
-      "           1.7073e+00, -1.1385e+00,  5.4654e-01,  1.7947e+00,  1.0829e+00,\n",
-      "          -7.8698e-01,  5.4647e-01,  4.7443e-01, -2.0840e+00,  1.4505e+00,\n",
-      "           1.7156e+00, -5.7487e-01, -2.2020e-01,  6.1603e-01,  1.4760e+00,\n",
-      "          -8.7942e-01, -2.8882e-01,  8.9869e-01, -6.0223e-01, -9.9205e-01,\n",
-      "          -1.9371e-01, -6.7272e-01, -1.7408e+00, -6.9259e-01, -1.1241e+00,\n",
-      "          -1.5903e+00,  3.4554e-01,  2.5587e-01, -1.1913e-01,  1.3727e+00,\n",
-      "           8.5202e-01, -8.9270e-01,  3.4655e-01, -1.5989e+00,  7.4882e-01,\n",
-      "          -2.4016e-01,  3.2150e-01, -4.9333e-01, -7.6685e-01, -2.4241e+00,\n",
-      "          -1.3111e+00,  3.3970e-01,  1.6059e-01,  4.3667e-01,  2.2499e+00,\n",
-      "          -7.0156e-01,  1.1386e+00, -1.3493e-02,  3.3560e-01,  3.2511e-01,\n",
-      "           8.0058e-01, -8.0776e-02, -1.2201e+00,  5.0933e-01, -6.9623e-03,\n",
-      "           1.2664e-01, -3.5895e-01,  2.2618e-01, -1.6236e-02, -2.3079e-01,\n",
-      "          -1.8697e+00, -7.4181e-02,  6.1955e-01,  3.2966e-01,  8.8567e-01,\n",
-      "           9.5766e-02,  1.9690e+00, -1.7141e+00,  3.2056e+00,  9.3478e-01,\n",
-      "          -1.2499e+00,  1.3547e+00, -1.4608e-01,  1.1562e+00,  1.9036e+00,\n",
-      "          -2.7944e-01, -4.4553e-01,  9.1232e-01]]])\n"
+      "None\n"
      ]
     }
    ],
@@ -196,20 +67,21 @@
     "#Extract embedding from schnetpack\n",
     "from schnetpack.representation import SchNet\n",
     "\n",
-    "activation = {}\n",
-    "\n",
-    "inputs = converter(at)\n",
-    "\n",
-    "def get_activation(name):\n",
-    "    def hook(module, input, output):\n",
-    "        activation[name] = output.detach()\n",
-    "    return hook\n",
-    "\n",
     "model = SchNet()\n",
-    "model.embedding.register_forward_hook(get_activation('Embedding'))\n",
-    "output = model(inputs)\n",
+    "layer_output=None\n",
     "\n",
-    "print(activation['Embedding'])"
+    "def layer_hook_fn(self, inp_tensor, out_tensor):\n",
+    "    global layer_output\n",
+    "    layer_output=out_tensor\n",
+    "    \n",
+    "model.embedding.register_forward_hook(layer_hook_fn)\n",
+    "\n",
+    "print(layer_output)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -219,6 +91,23 @@
    "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#activation = {}\n",
+    "\n",
+    "#inputs = converter(at)\n",
+    "\n",
+    "#def get_activation(name):\n",
+    "#    def hook(module, input, output):\n",
+    "#        activation[name] = output.detach()\n",
+    "#    return hook\n",
+    "\n",
+    "#model = SchNet()\n",
+    "#model.embedding.register_forward_hook(get_activation('Embedding'))\n",
+    "#output = model(inputs)\n",
+    "\n",
+    "#print(activation['Embedding'])\n",
     "    "
    ]
   },
