--- a/notebooks/output-intermediatte-layers.ipynb
+++ b/notebooks/output-intermediatte-layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -92,22 +92,22 @@
    "source": [
     "\n",
     "\n",
+    "### ANOTHER WAY OF DOING IT, given in issues\n",
     "\n",
+    "activation = {}\n",
     "\n",
-    "#activation = {}\n",
+    "inputs = converter(at)\n",
     "\n",
-    "#inputs = converter(at)\n",
+    "def get_activation(name):\n",
+    "    def hook(module, input, output):\n",
+    "        activation[name] = output.detach()\n",
+    "    return hook\n",
     "\n",
-    "#def get_activation(name):\n",
-    "#    def hook(module, input, output):\n",
-    "#        activation[name] = output.detach()\n",
-    "#    return hook\n",
+    "model = SchNet()\n",
+    "model.embedding.register_forward_hook(get_activation('Embedding'))\n",
+    "output = model(inputs)\n",
     "\n",
-    "#model = SchNet()\n",
-    "#model.embedding.register_forward_hook(get_activation('Embedding'))\n",
-    "#output = model(inputs)\n",
-    "\n",
-    "#print(activation['Embedding'])\n",
+    "print(activation['Embedding'])\n",
     "    "
    ]
   },
