--- a/notebooks/output-intermediatte-layers.ipynb
+++ b/notebooks/output-intermediatte-layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +68,17 @@
     "from schnetpack.representation import SchNet\n",
     "\n",
     "model = SchNet()\n",
-    "layer_output=None\n",
     "\n",
-    "def layer_hook_fn(self, inp_tensor, out_tensor):\n",
-    "    global layer_output\n",
-    "    layer_output=out_tensor\n",
-    "    \n",
-    "model.embedding.register_forward_hook(layer_hook_fn)\n",
+    "embedding_output=None\n",
     "\n",
-    "print(layer_output)\n",
+    "def embedding_hook(self, inp_tensor, out_tensor):\n",
+    "   # Global allows us to utilize embedding_output outside the current function scope\n",
+    "   global embedding_output \n",
+    "   embedding_output=out_tensor\n",
     "\n",
+    "model.embedding.register_forward_hook(embedding_hook)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(embedding_output)"
    ]
   },
   {
