--- a/notebooks/output-intermediatte-layers.ipynb
+++ b/notebooks/output-intermediatte-layers.ipynb
@@ -12,7 +12,11 @@
     "import schnetpack.data\n",
     "import pandas as pd\n",
     "import scipy.linalg as la\n",
-    "from schnetpack.datasets import QM9\n"
+    "from schnetpack.datasets import QM9\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -45,6 +49,7 @@
     "\n",
     "# Load split file for the train, validation and test \n",
     "train, val, test = spk.data.train_test_split(qm9data, split_file='./trained_models/qm911/split.npz')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -263,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
