--- a/notebooks/output-trained-layer.ipynb
+++ b/notebooks/output-trained-layer.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "This script hooks a layer from a loaded trained SchNet model for a forward pass (to output\n",
-    "values of intermediatte trained layers)\n",
+    "This script hooks a layer from a loaded trained SchNet checkpoint for a forward pass\n",
+    "of the values in that layer\n",
     "'''\n",
     "\n",
     "import torch\n",
@@ -120,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.hooks.RemovableHandle at 0x7f86af343e10>"
+       "<torch.utils.hooks.RemovableHandle at 0x7fbe48fcc0d0>"
       ]
      },
      "execution_count": 3,
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -600,13 +600,7 @@
       "H 1.6797624 -0.16854943 -0.6912165\n",
       "H 0.7521436 -0.15211189 1.6549588\n",
       "H -0.1749366 -1.6797266 1.3078655\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "43\n",
       "C -0.5051477 1.4701715 0.23591569\n",
       "C -0.5161165 -0.03155866 0.11930383\n",
@@ -683,7 +677,13 @@
       "H 0.06302906 -1.8877655 1.5487098\n",
       "H 0.81983924 -0.5026511 2.374872\n",
       "H 0.13022676 -0.5596606 -2.4803517\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "49\n",
       "N -0.9180845 0.6395383 0.012588642\n",
       "C 0.37054497 1.1104841 0.0024043377\n",
@@ -897,13 +897,7 @@
       "H 1.3272982 -1.4740405 1.1552814\n",
       "H 2.2730422 0.023088757 1.2160546\n",
       "H -1.4982442 -0.07637301 0.7967637\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "66\n",
       "C 0.47486082 1.4811767 -0.30994534\n",
       "C 0.60074914 -0.014396568 -0.02700048\n",
@@ -997,7 +991,13 @@
       "H 0.9210983 2.1529393 -1.066189\n",
       "H 0.033131935 2.0884876 0.46648553\n",
       "H 1.6713319 -0.18601204 -0.4842401\n",
-      "H 0.66993546 -2.1986678 0.14670907\n",
+      "H 0.66993546 -2.1986678 0.14670907\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "H -1.0154374 -2.2499297 0.09778134\n",
       "\n",
       "73\n",
@@ -1200,13 +1200,7 @@
       "C 0.00592748 -0.58591306 -0.14286245\n",
       "C -1.1154436 0.44729778 0.07466429\n",
       "C -0.015023246 1.5084827 0.3856067\n",
-      "C 1.1046822 0.47698423 0.045027785\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "C 1.1046822 0.47698423 0.045027785\n",
       "H -1.6964426 0.6352329 -0.8339263\n",
       "H -1.8139421 0.20165703 0.8795269\n",
       "H -0.03536181 2.3933592 -0.25162515\n",
@@ -1302,7 +1296,13 @@
       "H -1.3378298 1.9888783 -1.1380131\n",
       "H -1.6530746 1.9864924 0.60137004\n",
       "H -1.6497047 -0.3603626 -0.29951143\n",
-      "H 0.18096738 -1.1512548 -1.7365106\n",
+      "H 0.18096738 -1.1512548 -1.7365106\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "H 1.109292 0.34112036 -1.4218879\n",
       "H 0.53950834 0.33681104 1.7216681\n",
       "H -0.43946692 -1.1559474 1.6864924\n",
@@ -1754,13 +1754,7 @@
       "H -1.001043 0.56692207 0.8045077\n",
       "H -1.0616485 0.5655835 -0.978833\n",
       "H -0.17292129 -1.7835828 -1.0346601\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "129\n",
       "C -0.6239806 2.2652826 1.0627819\n",
       "C -0.58159614 0.7355562 1.0160365\n",
@@ -1845,7 +1839,13 @@
       "H -1.6077179 -1.7673993 -0.24417862\n",
       "H -0.110551044 -1.6354916 -1.1905934\n",
       "H 0.87281996 -1.2021258 0.932745\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "134\n",
       "O 1.0436517 2.1666121 0.0015743625\n",
       "C 1.1468397 0.75090134 -0.0069017336\n",
@@ -2153,7 +2153,13 @@
       "H 2.166488 -0.1770125 -0.09674521\n",
       "H 1.2559897 -0.2859418 1.4279869\n",
       "H -1.2684768 -1.0049369 1.0326049\n",
-      "H -1.62822 -1.2698586 -0.6898235\n",
+      "H -1.62822 -1.2698586 -0.6898235\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "157\n",
       "C -1.0121133 0.68888164 -0.18491957\n",
@@ -2269,13 +2275,7 @@
       "H 0.5107878 2.145598 0.0068137636\n",
       "H 2.3075929 0.036257755 -0.021998582\n",
       "H 0.6019018 -2.150013 -0.017435491\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "167\n",
       "O -0.88570654 0.6970377 0.012255961\n",
       "C 0.38539004 1.0800102 0.0021207342\n",
@@ -2490,7 +2490,13 @@
       "H -2.1724808 0.120988674 -0.4719388\n",
       "H -1.1812345 -2.428858 -0.24692592\n",
       "H 1.4803436 -2.064213 0.3293561\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "186\n",
       "C 0.029975163 2.1685956 0.05332137\n",
       "C -0.09854554 0.691882 -0.010295505\n",
@@ -2828,13 +2834,7 @@
       "H 0.08476452 2.434508 0.01250668\n",
       "H 2.048441 -1.1836501 -0.026703523\n",
       "H -2.066882 -1.2891845 0.013300076\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "212\n",
       "C -1.1270889 0.63044655 0.014579304\n",
       "N -0.018633228 1.3722496 0.0076402826\n",
@@ -2961,7 +2961,13 @@
       "H 1.6584848 -0.06563907 1.2592882\n",
       "H -1.9852607 -0.34484637 1.1534045\n",
       "H -0.44452545 -0.8246008 -1.7478604\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "220\n",
       "C -0.40504262 1.5460235 0.25088468\n",
       "C -0.37790194 0.0070240814 0.24503763\n",
@@ -3106,13 +3112,7 @@
       "H 1.7925798 -1.2822132 -1.2878113\n",
       "H 0.8261392 -2.765044 -1.1491324\n",
       "H 0.17575568 -1.3528514 -2.0042837\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "228\n",
       "C 0.08036236 2.9976254 0.12178206\n",
       "C 0.079849005 1.5430411 0.18126272\n",
@@ -3356,7 +3356,13 @@
       "C -1.2309511 -2.0132992 -1.3742664\n",
       "H 1.4041752 2.003599 -1.0785834\n",
       "H 0.21156752 0.89954203 -1.7813938\n",
-      "H -0.30484354 2.1418679 -0.6170839\n",
+      "H -0.30484354 2.1418679 -0.6170839\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "H 1.5292265 -0.23571718 0.014894477\n",
       "H 1.7557566 1.7343795 1.3245217\n",
       "H -0.3265748 -0.95657766 1.5144594\n",
@@ -3419,13 +3425,7 @@
       "N -0.7522947 -0.094302624 0.27823237\n",
       "C -1.1531556 -1.0938232 -0.55096793\n",
       "O -0.47620288 -1.6068761 -1.4175203\n",
-      "H 1.4808719 2.4444373 -0.18363926\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "H 1.4808719 2.4444373 -0.18363926\n",
       "H -0.026073365 2.1432781 -1.0701194\n",
       "H -0.07194969 2.5527952 0.6552363\n",
       "H 1.0960821 -0.016249089 -0.56616944\n",
@@ -3697,13 +3697,7 @@
       "H -0.067687035 -1.6937656 -1.1995618\n",
       "H -0.05112559 -1.7846174 0.5702464\n",
       "H -1.9638867 -2.7565002 -0.30523437\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "266\n",
       "C 1.0671483 2.636078 0.28079134\n",
       "C 1.0982454 1.1079654 0.18121542\n",
@@ -3817,7 +3811,13 @@
       "H -0.82523376 -2.2463646 -0.071445785\n",
       "H -0.002488072 -2.2595098 -1.6665666\n",
       "H 0.92187715 -2.2056773 -0.12892999\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "272\n",
       "C -0.03157688 1.841762 0.6693083\n",
       "C -0.0527739 0.3382123 0.6906639\n",
@@ -3997,13 +3997,7 @@
       "H 1.795802 -0.11564089 1.5525553\n",
       "\n",
       "283\n",
-      "C 0.11285259 1.7439431 1.022944\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "C 0.11285259 1.7439431 1.022944\n",
       "C -0.02199721 0.23552921 0.83303225\n",
       "O -1.3943117 -0.16036472 0.78649557\n",
       "C 0.69916433 -0.2601673 -0.43976086\n",
@@ -4181,7 +4175,13 @@
       "H 0.105899215 0.6641776 2.2258604\n",
       "H 1.5984668 -0.24324057 1.9299389\n",
       "H 0.12790102 -2.1607628 1.0993963\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "293\n",
       "C -0.5936175 1.8040679 -0.97460365\n",
       "C -0.56990963 0.31318477 -0.75166017\n",
