working-on-labelling

--- a/notebooks/trained-schnet.ipynb
+++ b/notebooks/trained-schnet.ipynb
@@ -66359,6 +66359,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rotational_constant_A': tensor([157.7118]), 'rotational_constant_B': tensor([157.7100]), 'rotational_constant_C': tensor([157.7070]), 'dipole_moment': tensor([0.]), 'isotropic_polarizability': tensor([1.9575]), 'homo': tensor([-10.5499]), 'lumo': tensor([3.1865]), 'gap': tensor([13.7363]), 'electronic_spatial_extent': tensor([9.9030]), 'zpve': tensor([1.2177]), 'energy_U0': tensor([-1101.4878]), 'energy_U': tensor([-1101.4098]), 'enthalpy_H': tensor([-1101.3840]), 'free_energy': tensor([-1102.0229]), 'heat_capacity': tensor([6.4690]), '_atomic_numbers': tensor([6, 1, 1, 1, 1]), '_positions': tensor([[-2.8340e-06,  2.3050e-06, -1.4378e-07],\n",
+      "        [ 1.4846e-02, -1.0918e+00, -6.0250e-03],\n",
+      "        [ 1.0244e+00,  3.7795e-01, -7.7246e-03],\n",
+      "        [-5.2812e-01,  3.6172e-01, -8.8464e-01],\n",
+      "        [-5.1112e-01,  3.5213e-01,  8.9840e-01]]), '_cell': tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]]), '_neighbors': tensor([[1, 2, 3, 4],\n",
+      "        [0, 2, 3, 4],\n",
+      "        [0, 1, 3, 4],\n",
+      "        [0, 1, 2, 4],\n",
+      "        [0, 1, 2, 3]]), '_cell_offset': tensor([[[0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.]],\n",
+      "\n",
+      "        [[0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.],\n",
+      "         [0., 0., 0.]]]), '_idx': tensor([0])}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import schnetpack as spk\n",
+    "import torch\n",
+    "import schnetpack.nn \n",
+    "import schnetpack.data\n",
+    "from schnetpack.datasets import QM9\n",
+    "\n",
+    "# Download QM9 dataset to use in evaluating model\n",
+    "qm9data = QM9('./qm9.db', remove_uncharacterized=True)\n",
+    "\n",
+    "at, props = qm9data.get_properties(0)\n",
+    "\n",
+    "device = 'cpu'\n",
+    "converter = spk.data.AtomsConverter(device=device)\n",
+    "\n",
+    "inputs = converter(at)\n",
+    "#print('Keys:', list(inputs.keys()))\n",
+    "\n",
+    "print(qm9data[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
