--- a/notebooks/checkpoint_layers.ipynb
+++ b/notebooks/checkpoint_layers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,15 +101,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load QM9 dataset\n",
     "from schnetpack.datasets import QM9\n",
@@ -147,7 +139,7 @@
     "number_of_inputs = 134000\n",
     "\n",
     "#set up device for forward pass\n",
-    "device='cpu'\n",
+    "device='cuda'\n",
     "\n",
     "# load atoms converter \n",
     "converter = spk.data.AtomsConverter(device=device)\n",
@@ -165,7 +157,7 @@
     "    at, props = qm9data.get_properties(idx)\n",
     "        \n",
     "    # print molecule for identification\n",
-    "#    print(idx)\n",
+    "    if id\n",
     "    z = print_molecule(props)\n",
     "    number_of_atoms=len(z)\n",
     "        \n",
@@ -53303,18 +53295,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
