--- a/notebooks/import-schnet-variables.ipynb
+++ b/notebooks/import-schnet-variables.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "3b50dd55",
+   "execution_count": 8,
+   "id": "6004945f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d7fd5fbd",
+   "execution_count": 9,
+   "id": "98db0c45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,47 +45,55 @@
     "        if props['_atomic_numbers'][i] == 9:\n",
     "            print('F',x[i],y[i],z[i]) \n",
     "    print('')  \n",
-    "    return z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "26ad0045",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return z\n",
+    "\n",
     "def hook_layer(self, inp_tensor, out_tensor):\n",
     "    # Self is included and refers to the model class\n",
     "    # Global allows us to utilize embedding_output outside the current function scope\n",
     "    global layer_output\n",
     "    #Update the embedding_output variable to be equal to our output tensor\n",
-    "    layer_output=out_tensor "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d121c17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    layer_output=out_tensor \n",
+    "    \n",
     "def convert_2D(number_of_atoms,layer_output):\n",
     "    layer = np.zeros((number_of_atoms,30))\n",
     "    for i in range(number_of_atoms):\n",
     "        for j in range(30):\n",
     "            layer[i][j] = layer_output[0][i][j]\n",
-    "    return layer"
+    "    return layer\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70a94b7a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "id": "b4d9f0ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "C -2.8340169e-06 2.3049886e-06 -1.4378233e-07\n",
+      "H 0.014845718 -1.0918331 -0.0060250196\n",
+      "H 1.0244261 0.3779494 -0.007724565\n",
+      "H -0.52811974 0.36172476 -0.88464487\n",
+      "H -0.5111183 0.3521308 0.89839613\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'W' from 'schnetpack.nn.cfconv' (C:\\Users\\aelsamma\\Anaconda3\\lib\\site-packages\\schnetpack\\nn\\cfconv.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-ebe3e9564fd3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     79\u001b[0m     \u001b[0myi\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0myi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 81\u001b[1;33m     \u001b[1;32mfrom\u001b[0m \u001b[0mschnetpack\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcfconv\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'W' from 'schnetpack.nn.cfconv' (C:\\Users\\aelsamma\\Anaconda3\\lib\\site-packages\\schnetpack\\nn\\cfconv.py)"
+     ]
+    }
+   ],
    "source": [
     "# Load QM9 dataset\n",
     "from schnetpack.datasets import QM9\n",
@@ -160,43 +168,18 @@
     "    # Forward pass molecules through the model\n",
     "    model(inputs)\n",
     "    \n",
+    "    #If you want to check with forward hook method\n",
     "    layer_output = layer_output.detach().numpy()\n",
     "    \n",
     "    from schnetpack.atomistic.output_modules import yi\n",
     "    \n",
-    "    yi=yi.detach().numpy()\n",
-    "    \n",
-    "    print(layer_output)\n",
-    "\n",
-    "    #convert layer tensor to 2D array\n",
-    "    rows = convert_2D(number_of_atoms,layer_output)\n",
-    "\n",
-    "    #save the vector of every oxygen atom encountered\n",
-    "    for i in range(number_of_atoms):\n",
-    "        if props['_atomic_numbers'][i] == 8:\n",
-    "            data = np.vstack((data,rows[i]))\n",
-    "            \n",
-    "    for i in range(number_of_atoms):\n",
-    "        if props['_atomic_numbers'][i] == 1:\n",
-    "            datah = np.vstack((datah,rows[i]))    \n",
-    "    for i in range(number_of_atoms):\n",
-    "        if props['_atomic_numbers'][i] == 1:\n",
-    "            datahae = np.vstack((datahae,yi[0][i]))\n",
-    "    for i in range(number_of_atoms):\n",
-    "        if props['_atomic_numbers'][i] == 8:\n",
-    "            dataoae = np.vstack((dataoae,yi[0][i]))            \n",
-    "    \n",
-    "print('DONE')            \n",
-    "savetxt('../../../data/dataO.csv',data,delimiter=',')\n",
-    "savetxt('../../../data/dataH.csv',datah,delimiter=',')\n",
-    "savetxt('../../../data/hae.csv',datahae,delimiter=',')\n",
-    "savetxt('../../../data/oae.csv',dataoae,delimiter=',')"
+    "    yi=yi.detach().numpy()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b4368d",
+   "id": "70849f82",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -204,47 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b0d6650",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0ce3f16",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03e9a0ff",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7cc4d3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1764a719",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1db3f02a",
+   "id": "a83a2701",
    "metadata": {},
    "outputs": [],
    "source": []
