--- a/notebooks/training-schnet-gpu.ipynb
+++ b/notebooks/training-schnet-gpu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -19,24 +19,19 @@
       "U0 of hyrogen: -13.61 eV\n",
       "U0 of carbon: -1029.86 eV\n",
       "U0 of oxygen: -2042.61 eV\n",
-      "Mean atomization energy / atom: tensor([-4.2408])\n",
-      "Std. dev. atomization energy / atom: tensor([0.1875])\n",
-      "None\n"
+      "Mean atomization energy / atom: tensor([-4.2446])\n",
+      "Std. dev. atomization energy / atom: tensor([0.1874])\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/amerelsamman/Programs/anaconda3/lib/python3.7/site-packages/torch/autograd/__init__.py:132: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
-      "  allow_unreachable=True)  # allow_unreachable flag\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Final validation MAE: 0.05 eV = 1.22 kcal/mol\n"
+     "ename": "NameError",
+     "evalue": "name 'output_mu' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-72b18de2e5cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     62\u001b[0m output_U0 = spk.atomistic.Atomwise(n_in=30, atomref=atomrefs[QM9.U0], property=QM9.mu,\n\u001b[0;32m     63\u001b[0m                                    mean=means[QM9.U0], contributions=True, stddev=stddevs[QM9.U0])\n\u001b[1;32m---> 64\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mAtomisticModel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrepresentation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mschnet\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_modules\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moutput_mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;31m## Training and Validation\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'output_mu' is not defined"
      ]
     }
    ],
@@ -68,8 +63,8 @@
     "\n",
     "train, val, test = spk.train_test_split(\n",
     "        data=qm9data,\n",
-    "        num_train=10000,\n",
-    "        num_val=5000,\n",
+    "        num_train=1000,\n",
+    "        num_val=500,\n",
     "        split_file=os.path.join(trained_model_path, \"split.npz\"),\n",
     "    )\n",
     "\n",
@@ -102,9 +97,9 @@
     "\n",
     "# Define output model and property to be predicted\n",
     "\n",
-    "output_U0 = spk.atomistic.Atomwise(n_in=30, atomref=atomrefs[QM9.U0], property=QM9.U0,\n",
+    "output_U0 = spk.atomistic.Atomwise(n_in=30, atomref=atomrefs[QM9.U0], property=QM9.mu,\n",
     "                                   mean=means[QM9.U0], contributions=True, stddev=stddevs[QM9.U0])\n",
-    "model = spk.AtomisticModel(representation=schnet, output_modules=output_U0)\n",
+    "model = spk.AtomisticModel(representation=schnet, output_modules=output_mu)\n",
     "\n",
     "## Training and Validation \n",
     "# NOTE You must delete previous best_model if you want to restart the training!\n",
@@ -123,9 +118,9 @@
     "\n",
     "import schnetpack.train as trn\n",
     "\n",
-    "loss = trn.build_mse_loss([QM9.U0])\n",
+    "loss = trn.build_mse_loss([QM9.mu])\n",
     "\n",
-    "metrics = [spk.metrics.MeanAbsoluteError(QM9.U0)]\n",
+    "metrics = [spk.metrics.MeanAbsoluteError(QM9.mu)]\n",
     "hooks = [\n",
     "    trn.CSVHook(log_path=trained_model_path, metrics=metrics),\n",
     "    trn.ReduceLROnPlateauHook(\n",
@@ -222,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
